--- a/Depo/Depo/Presentation/UserStories/Settings/PaycellCampaign/Views/PaycellDetailPopup.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/PaycellCampaign/Views/PaycellDetailPopup.xib
@@ -15,10 +15,10 @@
                 <outlet property="approveButton" destination="Op2-Na-ghI" id="oVq-6e-SjC"/>
                 <outlet property="closeButton" destination="uKo-4z-9r7" id="zAC-5o-NEm"/>
                 <outlet property="mainView" destination="Xz4-Zf-7ES" id="bHW-yq-Cf0"/>
-                <outlet property="textView" destination="Vpn-aE-kLC" id="aVR-v3-RcO"/>
                 <outlet property="thumbnailImage" destination="YHP-8P-myz" id="z5a-g4-aZk"/>
                 <outlet property="topView" destination="gDY-lk-MJ8" id="MHL-SO-JsR"/>
                 <outlet property="view" destination="ige-aJ-Qui" id="Gep-Kf-Bfl"/>
+                <outlet property="webView" destination="POF-Sf-l5V" id="Lwo-wX-TF1"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -76,28 +76,28 @@
                                 <constraint firstAttribute="bottom" secondItem="Op2-Na-ghI" secondAttribute="bottom" constant="16" id="fTO-V0-0SP"/>
                             </constraints>
                         </view>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Vpn-aE-kLC">
+                        <wkWebView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="POF-Sf-l5V">
                             <rect key="frame" x="14" y="159" width="326" height="477"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                            <color key="textColor" systemColor="labelColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                        </textView>
+                            <color key="backgroundColor" name="secondaryBackground"/>
+                            <wkWebViewConfiguration key="configuration">
+                                <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                <wkPreferences key="preferences"/>
+                            </wkWebViewConfiguration>
+                        </wkWebView>
                     </subviews>
                     <color key="backgroundColor" name="secondaryBackground"/>
                     <constraints>
                         <constraint firstItem="gDY-lk-MJ8" firstAttribute="top" secondItem="Xz4-Zf-7ES" secondAttribute="top" id="4rd-47-rDo"/>
-                        <constraint firstItem="Vpn-aE-kLC" firstAttribute="leading" secondItem="Xz4-Zf-7ES" secondAttribute="leading" constant="14" id="EpW-Bq-74O"/>
                         <constraint firstAttribute="width" constant="400" id="GS4-bj-6bA"/>
+                        <constraint firstItem="xuc-9A-zlE" firstAttribute="top" secondItem="POF-Sf-l5V" secondAttribute="bottom" constant="4" id="Gkl-ht-Xfo"/>
                         <constraint firstItem="xuc-9A-zlE" firstAttribute="leading" secondItem="Xz4-Zf-7ES" secondAttribute="leading" id="Hbe-qQ-YU0"/>
-                        <constraint firstItem="Vpn-aE-kLC" firstAttribute="top" secondItem="gDY-lk-MJ8" secondAttribute="bottom" constant="14" id="LCa-yH-AW5"/>
                         <constraint firstAttribute="trailing" secondItem="xuc-9A-zlE" secondAttribute="trailing" id="LIN-Qe-xT8"/>
                         <constraint firstAttribute="trailing" secondItem="gDY-lk-MJ8" secondAttribute="trailing" id="Nx2-c4-n1i"/>
-                        <constraint firstItem="xuc-9A-zlE" firstAttribute="top" secondItem="Vpn-aE-kLC" secondAttribute="bottom" constant="4" id="WMy-Uo-gBY"/>
-                        <constraint firstAttribute="trailing" secondItem="Vpn-aE-kLC" secondAttribute="trailing" constant="14" id="k2r-9G-2MF"/>
+                        <constraint firstItem="POF-Sf-l5V" firstAttribute="top" secondItem="gDY-lk-MJ8" secondAttribute="bottom" constant="14" id="PGb-NN-H63"/>
+                        <constraint firstAttribute="trailing" secondItem="POF-Sf-l5V" secondAttribute="trailing" constant="14" id="QoL-mu-kfd"/>
                         <constraint firstAttribute="bottom" secondItem="xuc-9A-zlE" secondAttribute="bottom" id="llp-6U-vSY"/>
                         <constraint firstItem="gDY-lk-MJ8" firstAttribute="leading" secondItem="Xz4-Zf-7ES" secondAttribute="leading" id="vGJ-bk-L1z"/>
+                        <constraint firstItem="POF-Sf-l5V" firstAttribute="leading" secondItem="Xz4-Zf-7ES" secondAttribute="leading" constant="14" id="yKS-IE-om0"/>
                     </constraints>
                     <variation key="default">
                         <mask key="constraints">
@@ -134,9 +134,6 @@
         <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
