--- a/Depo/Depo/Presentation/SupportFormController/ProfilePhoneEnterView.xib
+++ b/Depo/Depo/Presentation/SupportFormController/ProfilePhoneEnterView.xib
@@ -19,6 +19,7 @@
                 <outlet property="numberTextField" destination="YQq-mI-FHn" id="Net-7f-mSY"/>
                 <outlet property="phoneTextFieldBackView" destination="NZ3-m3-jqs" id="wrx-g9-TWc"/>
                 <outlet property="stackView" destination="V4F-7E-ZZm" id="IDL-4X-TIV"/>
+                <outlet property="subtitleContent" destination="w7p-q0-W6S" id="0n1-ub-9wk"/>
                 <outlet property="subtitleLabel" destination="wLZ-8v-Lna" id="wOW-ft-dgn"/>
                 <outlet property="titleLabel" destination="npA-QB-IdW" id="O45-gM-7gw"/>
             </connections>
@@ -28,17 +29,17 @@
             <rect key="frame" x="0.0" y="0.0" width="413" height="108"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ev9-8J-dhu">
-                    <rect key="frame" x="0.0" y="20" width="413" height="93"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="V4F-7E-ZZm">
+                    <rect key="frame" x="0.0" y="10" width="413" height="88"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="V4F-7E-ZZm">
-                            <rect key="frame" x="0.0" y="10" width="413" height="73"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ev9-8J-dhu">
+                            <rect key="frame" x="0.0" y="0.0" width="413" height="56"/>
                             <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b4U-32-G33">
-                                    <rect key="frame" x="0.0" y="0.0" width="413" height="73"/>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b4U-32-G33" userLabel="TextField">
+                                    <rect key="frame" x="0.0" y="0.0" width="413" height="56"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IG7-kw-sF2">
-                                            <rect key="frame" x="0.0" y="10.5" width="413" height="32"/>
+                                            <rect key="frame" x="0.0" y="2" width="413" height="32"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="mCa-3z-Hrr">
                                                     <rect key="frame" x="0.0" y="0.0" width="413" height="32"/>
@@ -104,33 +105,22 @@
                                             </constraints>
                                         </view>
                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AQZ-vx-4IW">
-                                            <rect key="frame" x="0.0" y="-10" width="413" height="28.5"/>
+                                            <rect key="frame" x="0.0" y="-10" width="413" height="20"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4vr-3h-um8">
-                                                    <rect key="frame" x="0.0" y="0.0" width="106" height="28.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="106" height="20"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="npA-QB-IdW">
-                                                    <rect key="frame" x="106" y="0.0" width="41.5" height="28.5"/>
+                                                    <rect key="frame" x="106" y="0.0" width="41.5" height="20"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gzP-1t-qfF">
-                                                    <rect key="frame" x="147.5" y="0.0" width="265.5" height="28.5"/>
+                                                    <rect key="frame" x="147.5" y="0.0" width="265.5" height="20"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </view>
-                                            </subviews>
-                                        </stackView>
-                                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="77z-Gv-rrT">
-                                            <rect key="frame" x="0.0" y="42.5" width="413" height="30.5"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wLZ-8v-Lna">
-                                                    <rect key="frame" x="0.0" y="0.0" width="413" height="30.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                             </subviews>
                                         </stackView>
                                     </subviews>
@@ -138,37 +128,47 @@
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="AQZ-vx-4IW" secondAttribute="trailing" id="9Cc-jQ-MN7"/>
                                         <constraint firstItem="AQZ-vx-4IW" firstAttribute="bottom" secondItem="IG7-kw-sF2" secondAttribute="top" constant="8" symbolic="YES" id="OXR-GC-ZUn"/>
-                                        <constraint firstItem="IG7-kw-sF2" firstAttribute="bottom" secondItem="77z-Gv-rrT" secondAttribute="top" id="YRW-61-Iew"/>
                                         <constraint firstAttribute="trailing" secondItem="IG7-kw-sF2" secondAttribute="trailing" id="eAz-XW-1JA"/>
-                                        <constraint firstAttribute="trailing" secondItem="77z-Gv-rrT" secondAttribute="trailing" id="f2d-YM-SjW"/>
                                         <constraint firstItem="AQZ-vx-4IW" firstAttribute="leading" secondItem="b4U-32-G33" secondAttribute="leading" id="j8u-W0-Khk"/>
-                                        <constraint firstAttribute="bottom" secondItem="77z-Gv-rrT" secondAttribute="bottom" id="k49-hW-tSS"/>
                                         <constraint firstItem="IG7-kw-sF2" firstAttribute="centerY" secondItem="b4U-32-G33" secondAttribute="centerY" constant="-10" id="oeV-An-tFf"/>
                                         <constraint firstItem="IG7-kw-sF2" firstAttribute="leading" secondItem="b4U-32-G33" secondAttribute="leading" id="pTW-Vo-LFU"/>
-                                        <constraint firstItem="77z-Gv-rrT" firstAttribute="leading" secondItem="b4U-32-G33" secondAttribute="leading" id="sgR-e6-Jnq"/>
                                         <constraint firstItem="4vr-3h-um8" firstAttribute="trailing" secondItem="YQq-mI-FHn" secondAttribute="leading" id="wpM-At-RQZ"/>
                                         <constraint firstItem="AQZ-vx-4IW" firstAttribute="top" secondItem="b4U-32-G33" secondAttribute="top" constant="-10" id="zcR-zP-uXs"/>
                                     </constraints>
                                 </view>
                             </subviews>
-                        </stackView>
+                            <color key="backgroundColor" name="primaryBackground"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="b4U-32-G33" secondAttribute="trailing" id="Jxf-WQ-YT8"/>
+                                <constraint firstAttribute="height" constant="56" id="ZU2-gM-vnZ"/>
+                                <constraint firstItem="b4U-32-G33" firstAttribute="leading" secondItem="Ev9-8J-dhu" secondAttribute="leading" id="Zdx-qq-aqH"/>
+                                <constraint firstItem="b4U-32-G33" firstAttribute="top" secondItem="Ev9-8J-dhu" secondAttribute="top" id="kO2-fa-wrx"/>
+                                <constraint firstAttribute="bottom" secondItem="b4U-32-G33" secondAttribute="bottom" id="lXK-NV-car"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w7p-q0-W6S" userLabel="subtitleContent">
+                            <rect key="frame" x="0.0" y="56" width="413" height="32"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wLZ-8v-Lna" userLabel="subtitleLabel">
+                                    <rect key="frame" x="10" y="10" width="393" height="12"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        </view>
                     </subviews>
-                    <color key="backgroundColor" name="primaryBackground"/>
-                    <constraints>
-                        <constraint firstItem="V4F-7E-ZZm" firstAttribute="top" secondItem="Ev9-8J-dhu" secondAttribute="top" constant="10" id="Ndf-uY-gCs"/>
-                        <constraint firstAttribute="trailing" secondItem="V4F-7E-ZZm" secondAttribute="trailing" id="Zc1-bG-kiP"/>
-                        <constraint firstAttribute="bottom" secondItem="V4F-7E-ZZm" secondAttribute="bottom" constant="10" id="e9D-Et-EiG"/>
-                        <constraint firstItem="V4F-7E-ZZm" firstAttribute="leading" secondItem="Ev9-8J-dhu" secondAttribute="leading" id="mpE-Gv-ZHt"/>
-                    </constraints>
-                </view>
+                </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
-                <constraint firstItem="Ev9-8J-dhu" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="20" id="6yZ-4Z-jGa"/>
-                <constraint firstItem="Ev9-8J-dhu" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="8SK-U5-GEX"/>
-                <constraint firstItem="Ev9-8J-dhu" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="tLC-zs-Up5"/>
-                <constraint firstItem="Ev9-8J-dhu" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" constant="5" id="w02-3g-N3P"/>
+                <constraint firstItem="V4F-7E-ZZm" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="JQ6-rY-W46"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="V4F-7E-ZZm" secondAttribute="bottom" constant="10" id="ZEy-e6-uBZ"/>
+                <constraint firstItem="V4F-7E-ZZm" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="eLv-rC-ac6"/>
+                <constraint firstItem="V4F-7E-ZZm" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="he7-T7-g7h"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="181.59999999999999" y="-99.850074962518747"/>
