--- a/Depo/Depo/Presentation/UserStories/Start/Login/View/LoginViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/Login/View/LoginViewController.xib
@@ -41,7 +41,7 @@
                     <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ufk-2Q-UcS">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            <rect key="frame" x="0.0" y="30" width="414" height="896"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="382" placeholderIntrinsicHeight="178" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="IUh-15-NB0">
                                     <rect key="frame" x="16" y="0.0" width="382" height="230"/>
@@ -102,7 +102,7 @@
                                     <rect key="frame" x="0.0" y="246" width="414" height="337"/>
                                     <color key="backgroundColor" name="primaryBackground"/>
                                 </view>
-                                <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="3pB-Lp-wU7">
+                                <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="3pB-Lp-wU7" userLabel="FieldsStackView">
                                     <rect key="frame" x="20" y="246" width="374" height="337"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" placeholderIntrinsicWidth="335" placeholderIntrinsicHeight="80" translatesAutoresizingMaskIntoConstraints="NO" id="zR0-Yb-crR" userLabel="email" customClass="ProfileTextEnterView" customModule="Billo" customModuleProvider="target">
@@ -146,11 +146,11 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GFG-n0-P2R">
-                                                    <rect key="frame" x="87.5" y="0.0" width="232.5" height="30"/>
+                                                    <rect key="frame" x="87.5" y="0.0" width="216.5" height="30"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </view>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AWM-PX-Ia2">
-                                                    <rect key="frame" x="328" y="0.0" width="46" height="30"/>
+                                                    <rect key="frame" x="312" y="0.0" width="62" height="30"/>
                                                     <state key="normal" title="Button"/>
                                                     <connections>
                                                         <action selector="onForgotPasswordTap:" destination="-1" eventType="touchUpInside" id="c4a-Kf-3Ex"/>
@@ -163,6 +163,7 @@
                                             </connections>
                                         </stackView>
                                     </subviews>
+                                    <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
                                 </stackView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dhc-pL-wnH" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="52" y="633" width="310.5" height="44"/>
@@ -195,7 +196,7 @@
                     </subviews>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="ufk-2Q-UcS" secondAttribute="trailing" id="GSy-AK-CpA"/>
-                        <constraint firstItem="ufk-2Q-UcS" firstAttribute="top" secondItem="G71-fS-dIW" secondAttribute="top" id="gYZ-Hj-n2Z"/>
+                        <constraint firstItem="ufk-2Q-UcS" firstAttribute="top" secondItem="G71-fS-dIW" secondAttribute="top" constant="30" id="gYZ-Hj-n2Z" userLabel="View.top = top"/>
                         <constraint firstItem="ufk-2Q-UcS" firstAttribute="leading" secondItem="G71-fS-dIW" secondAttribute="leading" id="oHM-6k-stA"/>
                         <constraint firstAttribute="bottom" secondItem="ufk-2Q-UcS" secondAttribute="bottom" id="zsd-06-Dit"/>
                     </constraints>
