--- a/Depo/Depo/Presentation/UserStories/Start/Login/View/LoginViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/Login/View/LoginViewController.xib
@@ -55,8 +55,8 @@
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" image="chevronLeft" translatesAutoresizingMaskIntoConstraints="NO" id="AZt-SW-P39">
-                                                    <rect key="frame" x="346" y="13.5" width="16" height="9"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" image="iconArrowDownActive" translatesAutoresizingMaskIntoConstraints="NO" id="AZt-SW-P39">
+                                                    <rect key="frame" x="338" y="13.5" width="24" height="9"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="9" id="9zW-9Q-pLq"/>
                                                     </constraints>
@@ -200,7 +200,7 @@
     </objects>
     <resources>
         <image name="checkboxSelected" width="26" height="26"/>
-        <image name="chevronLeft" width="16" height="9"/>
+        <image name="iconArrowDownActive" width="24" height="24"/>
         <image name="iconSelectCheck" width="24" height="24"/>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
